# Test-GanG

./: Cargo.toml
src/: chat_gpt_client.rs  db_work.rs  main.rs  questions_getting.rs
