[package]
name = "first_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotkey = "0.3.1"
systray2 = "0.5.0"
tokio = { version = "1.4.0", features = ["full"] }
winit = "0.28.6"
native-dialog = "0.6.4"
winapi = { version = "0.3", features = ["synchapi", "minwindef", "processthreadsapi", "winbase", "errhandlingapi", "winerror"] }
ureq = {version = "2.7.1", features = ["json"] }
tokio-postgres = "0.7.8"
global-hotkey = "0.2.3"
thirtyfour = "0.31.0"
serde_json = "1.0"
reqwest = {version = "0.11.18", features = ["json"] }
self_update = {version = "0.37.0", features = ["archive-zip", "compression-zip-deflate", "compression-flate2", "archive-tar"]}